// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transforms HTML to rich text > basic > empty 1`] = `[]`;

exports[`transforms HTML to rich text > basic > multiple tags 1`] = `
[
  {
    "direction": "ltr",
    "spans": [],
    "text": "lorem ipsum dolor sit amet",
    "type": "heading1",
  },
  {
    "direction": "ltr",
    "spans": [],
    "text": "consectetur adipiscing elit",
    "type": "paragraph",
  },
]
`;

exports[`transforms HTML to rich text > basic > single tag 1`] = `
[
  {
    "direction": "ltr",
    "spans": [],
    "text": "lorem ipsum dolor sit amet",
    "type": "paragraph",
  },
]
`;

exports[`transforms HTML to rich text > configuration > container > converts only the given container 1`] = `
[
  {
    "direction": "ltr",
    "spans": [],
    "text": "consectetur adipiscing elit",
    "type": "paragraph",
  },
]
`;

exports[`transforms HTML to rich text > configuration > defaultWrapperNodeType > wraps inner input within a "paragraph" rich text node type by default 1`] = `
[
  {
    "direction": "ltr",
    "spans": [
      {
        "end": 11,
        "start": 6,
        "type": "strong",
      },
    ],
    "text": "lorem ipsum dolor sit amet",
    "type": "paragraph",
  },
]
`;

exports[`transforms HTML to rich text > configuration > defaultWrapperNodeType > wraps inner input within the given rich text node type 1`] = `
[
  {
    "direction": "ltr",
    "spans": [
      {
        "end": 11,
        "start": 6,
        "type": "strong",
      },
    ],
    "text": "lorem ipsum dolor sit amet",
    "type": "heading1",
  },
]
`;

exports[`transforms HTML to rich text > configuration > direction > marks text as left-to-right 1`] = `
[
  {
    "direction": "ltr",
    "spans": [],
    "text": "lorem ipsum dolor sit amet",
    "type": "paragraph",
  },
]
`;

exports[`transforms HTML to rich text > configuration > direction > marks text as right-to-left 1`] = `
[
  {
    "direction": "rtl",
    "spans": [],
    "text": "lorem ipsum dolor sit amet",
    "type": "paragraph",
  },
]
`;

exports[`transforms HTML to rich text > configuration > exclude > excludes the given complex selectors 1`] = `
[
  {
    "direction": "ltr",
    "spans": [],
    "text": "ipsum dolor sit amet",
    "type": "heading1",
  },
  {
    "direction": "ltr",
    "spans": [
      {
        "data": {
          "link_type": "Web",
          "target": undefined,
          "url": "#",
        },
        "end": 11,
        "start": 0,
        "type": "hyperlink",
      },
    ],
    "text": "consectetur adipiscing elit",
    "type": "paragraph",
  },
]
`;

exports[`transforms HTML to rich text > configuration > exclude > excludes the given selectors 1`] = `
[
  {
    "direction": "ltr",
    "spans": [],
    "text": "consectetur adipiscing elit",
    "type": "paragraph",
  },
]
`;

exports[`transforms HTML to rich text > configuration > include > dedupes matches that are child of other matches 1`] = `
[
  {
    "direction": "ltr",
    "spans": [],
    "text": "lorem ipsum dolor sit amet",
    "type": "paragraph",
  },
  {
    "direction": "ltr",
    "spans": [],
    "text": "consectetur adipiscing elit",
    "type": "paragraph",
  },
]
`;

exports[`transforms HTML to rich text > configuration > include > includes only the given complex selectors 1`] = `
[
  {
    "direction": "ltr",
    "spans": [],
    "text": "consectetur adipiscing elit",
    "type": "paragraph",
  },
]
`;

exports[`transforms HTML to rich text > configuration > include > includes only the given selectors 1`] = `
[
  {
    "direction": "ltr",
    "spans": [],
    "text": "lorem ipsum dolor sit amet",
    "type": "heading1",
  },
]
`;

exports[`transforms HTML to rich text > configuration > model > filters output according to multi type model 1`] = `
[
  {
    "direction": "ltr",
    "spans": [
      {
        "end": 22,
        "start": 12,
        "type": "strong",
      },
    ],
    "text": "consectetur adipiscing elit",
    "type": "paragraph",
  },
  {
    "direction": "ltr",
    "spans": [],
    "text": "sed do eiusmod tempor",
    "type": "paragraph",
  },
]
`;

exports[`transforms HTML to rich text > configuration > model > filters output according to single type model 1`] = `
[
  {
    "direction": "ltr",
    "spans": [
      {
        "end": 11,
        "start": 6,
        "type": "strong",
      },
    ],
    "text": "lorem ipsum dolor sit amet",
    "type": "heading1",
  },
]
`;

exports[`transforms HTML to rich text > configuration > serializer > complex selector 1`] = `
[
  {
    "direction": "ltr",
    "spans": [],
    "text": "lorem ipsum dolor sit amet",
    "type": "heading1",
  },
  {
    "direction": "ltr",
    "spans": [],
    "text": "consectetur adipiscing elit",
    "type": "paragraph",
  },
]
`;

exports[`transforms HTML to rich text > configuration > serializer > selector 1`] = `
[
  {
    "direction": "ltr",
    "spans": [],
    "text": "lorem ipsum dolor sit amet",
    "type": "heading1",
  },
  {
    "direction": "ltr",
    "spans": [],
    "text": "consectetur adipiscing elit",
    "type": "paragraph",
  },
]
`;

exports[`transforms HTML to rich text > configuration > serializer > tag name 1`] = `
[
  {
    "direction": "ltr",
    "spans": [],
    "text": "lorem ipsum dolor sit amet",
    "type": "heading1",
  },
]
`;

exports[`transforms HTML to rich text > embed > iframe 1`] = `
[
  {
    "oembed": {
      "embed_url": "https://www.youtube.com/embed/wkS1bf7BLjs?feature=oembed",
      "height": 150,
      "html": "<iframe width=\\"200\\" height=\\"150\\" src=\\"https://www.youtube.com/embed/wkS1bf7BLjs?feature=oembed\\" frameborder=\\"0\\" allow=\\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\\" referrerpolicy=\\"strict-origin-when-cross-origin\\" allowfullscreen title=\\"幾田りら「ハミング」Official Music Video\\"></iframe>",
      "title": "幾田りら「ハミング」Official Music Video",
      "type": "rich",
      "version": "1.0",
      "width": 200,
    },
    "type": "embed",
  },
]
`;

exports[`transforms HTML to rich text > image > extracts image in text nodes and resume previous text node > adjacent spans 1`] = `
[
  {
    "direction": "ltr",
    "spans": [
      {
        "end": 11,
        "start": 6,
        "type": "strong",
      },
    ],
    "text": "lorem ipsum",
    "type": "paragraph",
  },
  {
    "alt": "bar",
    "copyright": null,
    "dimensions": {
      "height": 0,
      "width": 0,
    },
    "edit": {
      "background": "transparent",
      "x": 0,
      "y": 0,
      "zoom": 1,
    },
    "id": "",
    "type": "image",
    "url": "https://example.com/foo.png",
  },
  {
    "direction": "ltr",
    "spans": [
      {
        "end": 5,
        "start": 0,
        "type": "em",
      },
    ],
    "text": "dolor sit amet",
    "type": "paragraph",
  },
]
`;

exports[`transforms HTML to rich text > image > extracts image in text nodes and resume previous text node > basic 1`] = `
[
  {
    "direction": "ltr",
    "spans": [],
    "text": "lorem ipsum",
    "type": "paragraph",
  },
  {
    "alt": "bar",
    "copyright": null,
    "dimensions": {
      "height": 0,
      "width": 0,
    },
    "edit": {
      "background": "transparent",
      "x": 0,
      "y": 0,
      "zoom": 1,
    },
    "id": "",
    "type": "image",
    "url": "https://example.com/foo.png",
  },
  {
    "direction": "ltr",
    "spans": [],
    "text": "dolor sit amet",
    "type": "paragraph",
  },
]
`;

exports[`transforms HTML to rich text > image > extracts image in text nodes and resume previous text node > spans 1`] = `
[
  {
    "direction": "ltr",
    "spans": [
      {
        "end": 5,
        "start": 0,
        "type": "strong",
      },
    ],
    "text": "lorem ipsum",
    "type": "paragraph",
  },
  {
    "alt": "bar",
    "copyright": null,
    "dimensions": {
      "height": 0,
      "width": 0,
    },
    "edit": {
      "background": "transparent",
      "x": 0,
      "y": 0,
      "zoom": 1,
    },
    "id": "",
    "type": "image",
    "url": "https://example.com/foo.png",
  },
  {
    "direction": "ltr",
    "spans": [
      {
        "end": 9,
        "start": 6,
        "type": "em",
      },
    ],
    "text": "dolor sit amet",
    "type": "paragraph",
  },
]
`;

exports[`transforms HTML to rich text > image > non-prismic 1`] = `
[
  {
    "alt": "foo",
    "copyright": null,
    "dimensions": {
      "height": 0,
      "width": 0,
    },
    "edit": {
      "background": "transparent",
      "x": 0,
      "y": 0,
      "zoom": 1,
    },
    "id": "",
    "type": "image",
    "url": "https://example.com/foo.png",
  },
]
`;

exports[`transforms HTML to rich text > image > prismic 1`] = `
[
  {
    "alt": "foo",
    "copyright": null,
    "dimensions": {
      "height": 1602,
      "width": 2400,
    },
    "edit": {
      "background": "transparent",
      "x": 399,
      "y": 259,
      "zoom": 1.5,
    },
    "id": "",
    "type": "image",
    "url": "https://images.prismic.io/200629-sms-hoy/f0a757f6-770d-4eb8-a08b-f1727f1a58e4_guilherme-romano-KI2KaOeT670-unsplash.jpg?auto=format%2Ccompress&rect=399%2C259%2C1600%2C1068&w=2400&h=1602",
  },
]
`;

exports[`transforms HTML to rich text > spans > directly adjacent spans > compacts similar > hyperlink 1`] = `
[
  {
    "direction": "ltr",
    "spans": [
      {
        "data": {
          "link_type": "Web",
          "target": undefined,
          "url": "https://prismic.io",
        },
        "end": 17,
        "start": 6,
        "type": "hyperlink",
      },
    ],
    "text": "lorem ipsum dolor sit amet",
    "type": "paragraph",
  },
]
`;

exports[`transforms HTML to rich text > spans > directly adjacent spans > compacts similar > label 1`] = `
[
  {
    "direction": "ltr",
    "spans": [
      {
        "data": {
          "label": "underline",
        },
        "end": 17,
        "start": 6,
        "type": "label",
      },
    ],
    "text": "lorem ipsum dolor sit amet",
    "type": "paragraph",
  },
]
`;

exports[`transforms HTML to rich text > spans > directly adjacent spans > compacts similar > nested spans 1`] = `
[
  {
    "direction": "ltr",
    "spans": [
      {
        "end": 11,
        "start": 6,
        "type": "strong",
      },
      {
        "end": 17,
        "start": 9,
        "type": "em",
      },
    ],
    "text": "lorem ipsum dolor sit amet",
    "type": "paragraph",
  },
]
`;

exports[`transforms HTML to rich text > spans > directly adjacent spans > compacts similar > strong, em 1`] = `
[
  {
    "direction": "ltr",
    "spans": [
      {
        "end": 17,
        "start": 6,
        "type": "strong",
      },
      {
        "end": 38,
        "start": 22,
        "type": "em",
      },
    ],
    "text": "lorem ipsum dolor sit amet consectetur adipiscing elit",
    "type": "paragraph",
  },
]
`;

exports[`transforms HTML to rich text > spans > directly adjacent spans > does not compact different > hyperlink 1`] = `
[
  {
    "direction": "ltr",
    "spans": [
      {
        "data": {
          "link_type": "Web",
          "target": undefined,
          "url": "https://prismic.io",
        },
        "end": 11,
        "start": 6,
        "type": "hyperlink",
      },
      {
        "data": {
          "link_type": "Web",
          "target": undefined,
          "url": "https://google.com",
        },
        "end": 17,
        "start": 11,
        "type": "hyperlink",
      },
    ],
    "text": "lorem ipsum dolor sit amet",
    "type": "paragraph",
  },
]
`;

exports[`transforms HTML to rich text > spans > directly adjacent spans > does not compact different > label 1`] = `
[
  {
    "direction": "ltr",
    "spans": [
      {
        "data": {
          "label": "underline",
        },
        "end": 11,
        "start": 6,
        "type": "label",
      },
      {
        "data": {
          "label": "strikethrough",
        },
        "end": 17,
        "start": 11,
        "type": "label",
      },
    ],
    "text": "lorem ipsum dolor sit amet",
    "type": "paragraph",
  },
]
`;

exports[`transforms HTML to rich text > spans > hyperlink 1`] = `
[
  {
    "direction": "ltr",
    "spans": [
      {
        "data": {
          "link_type": "Web",
          "target": undefined,
          "url": "https://prismic.io",
        },
        "end": 11,
        "start": 6,
        "type": "hyperlink",
      },
      {
        "data": {
          "link_type": "Web",
          "target": "_blank",
          "url": "https://prismic.io",
        },
        "end": 21,
        "start": 18,
        "type": "hyperlink",
      },
    ],
    "text": "lorem ipsum dolor sit amet",
    "type": "paragraph",
  },
]
`;

exports[`transforms HTML to rich text > spans > label 1`] = `
[
  {
    "direction": "ltr",
    "spans": [
      {
        "data": {
          "label": "underline",
        },
        "end": 11,
        "start": 6,
        "type": "label",
      },
    ],
    "text": "lorem ipsum dolor sit amet",
    "type": "paragraph",
  },
]
`;

exports[`transforms HTML to rich text > spans > nested spans 1`] = `
[
  {
    "direction": "ltr",
    "spans": [
      {
        "end": 17,
        "start": 6,
        "type": "strong",
      },
      {
        "end": 17,
        "start": 9,
        "type": "em",
      },
      {
        "data": {
          "link_type": "Web",
          "target": undefined,
          "url": "https://prismic.io",
        },
        "end": 17,
        "start": 12,
        "type": "hyperlink",
      },
    ],
    "text": "lorem ipsum dolor sit amet",
    "type": "paragraph",
  },
]
`;

exports[`transforms HTML to rich text > spans > strong, em 1`] = `
[
  {
    "direction": "ltr",
    "spans": [
      {
        "end": 11,
        "start": 6,
        "type": "strong",
      },
      {
        "end": 21,
        "start": 18,
        "type": "em",
      },
    ],
    "text": "lorem ipsum dolor sit amet",
    "type": "paragraph",
  },
]
`;

exports[`transforms HTML to rich text > whistespaces > strips complex indentation 1`] = `
[
  {
    "direction": "ltr",
    "spans": [],
    "text": "lorem ipsum dolor sit amet consectetur adipiscing elit",
    "type": "paragraph",
  },
]
`;

exports[`transforms HTML to rich text > whistespaces > strips indentation 1`] = `
[
  {
    "direction": "ltr",
    "spans": [],
    "text": "lorem ipsum dolor sit amet",
    "type": "paragraph",
  },
]
`;

exports[`transforms HTML to rich text > whistespaces > treats \`<br>\` as new lines 1`] = `
[
  {
    "direction": "ltr",
    "spans": [],
    "text": "lorem ipsum dolor sit amet
consectetur adipiscing elit",
    "type": "paragraph",
  },
]
`;
